Add Account model and repository for user management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=Capstone Test
 server.port=8088
 spring.security.user.name=admin
 spring.security.user.password=pass
+spring.mongodb.uri=mongodb+srv://adradd05_db_user:bpAFYFsNczBFhEmX@task-scheduler.fwpdedk.mongodb.net/?appName=Task-Scheduler
