Created Service layer, featuring interface and implementations. Created Controller layer, including AccountController and TaskController.

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,6 @@ build/
 ### VS Code ###
 .vscode/
 
-.properties
+
+# Ignore Spring Boot application properties
+src/main/resources/application.properties
